# uwuify

./: .gitignore  LICENSE  README.md  flake.nix  justfile  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml  tests.yml
tests/: test_cli.py  test_core.py
uwuify/: __init__.py  __main__.py  cli.py  core.py
