[tool.poetry]
name = "uwuify"
version = "1.2.1"
description = "uwuifys text"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/uwuify"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"

[tool.poetry.scripts]
uwuify = "uwuify.cli:main"

[tool.poetry.group.tests.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
