[tool.poetry]
name = "uwuify"
version = "1.3.0"
description = "uwuifys text"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/uwuify"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

[tool.poetry.scripts]
uwuify = "uwuify.cli:main"

[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
